--- a/Scripts/3.0_ANXIETY.Rmd
+++ b/Scripts/3.0_ANXIETY.Rmd
@@ -222,14 +222,14 @@ tab_model(Model_latency_high)
 hist(residuals(Model_latency_high))
 
 #Calculating repeatabilities using custom made functions
-rpt_latency_high(Anxiety_Control) -> Control_latency_high 
-Control_latency_high 
-rpt_latency_high(Anxiety_Treatment) -> Treatment_latency_high 
-Treatment_latency_high
-rpt_latency_high(Anxiety_Maternal) -> Maternal_latency_high
-Maternal_latency_high
-rpt_latency_high(Anxiety_Paternal) -> Paternal_latency_high
-Paternal_latency_high
+rpt_latency(Anxiety_Control) -> Control_latency
+Control_latency
+rpt_latency(Anxiety_Treatment) -> Treatment_latency
+Treatment_latency
+rpt_latency(Anxiety_Maternal) -> Maternal_latency
+Maternal_latency
+rpt_latency(Anxiety_Paternal) -> Paternal_latency
+Paternal_latency
 
 
 # Calculating difference in variance between short tanks and tall tanks 
@@ -246,23 +246,25 @@ anova(Model_latency_high1, Model_latency_high2) #calculating difference between 
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_freq_high <- lmer(freq_high ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_freq_high)) #histogram of residuals reveals a transformation is required
-
-Model_freq_high0 <- lmer(sqrt(freq_high) ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_freq_high0))
+Model_freq_high <- lmer(freq_high ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_freq_high)
+hist(residuals(Model_freq_high))
 
 #Calculating repeatabilities using custom made functions
-rpt_freq(Anxiety_Control) -> Control_freq_high 
-Control_freq_high
-rpt_freq(Anxiety_Treatment) -> Treatment_freq_high 
-Treatment_freq_high
+rpt_freq(Anxiety_Control) -> Control_freq 
+Control_freq
+rpt_freq(Anxiety_Treatment) -> Treatment_freq
+Treatment_freq
+rpt_freq(Anxiety_Maternal) -> Maternal_freq
+Maternal_freq
+rpt_freq(Anxiety_Paternal) -> Paternal_freq
+Paternal_freq
 
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_freq_high1 <- lme(sqrt(freq_high) ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_freq_high1 <- lme(freq_high ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_freq_high1)
-Model_freq_high2 <- lme(sqrt(freq_high) ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_freq_high2 <- lme(freq_high ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_freq_high2)
 anova(Model_freq_high1, Model_freq_high2) #calculating difference between two models to find difference in variance
 ```
