--- a/Scripts/6.1_LEARNING_ANALYSIS.Rmd
+++ b/Scripts/6.1_LEARNING_ANALYSIS.Rmd
@@ -17,18 +17,24 @@ source("../Scripts/functions_learning.R")
 #Subset data into control and treatment groups and then by sex
 ```{r}
 #Subsetting data by control and treatment
-Learning_Control <- subset(p2cs, p2cs$set == "control") 
-Learning_Treatment <- subset(p2cs, p2cs$set == "treatment") 
+Learning_Control <- subset(p2cs, p2cs$Tank == "Within_Control") 
+Learning_Treatment <- subset(p2cs, p2cs$Tank == "Within_Treatment") 
+Learning_Maternal <- subset(p2cs, p2cs$Tank == "Maternal") 
+Learning_Paternal <- subset(p2cs, p2cs$Tank == "Paternal") 
 
 
 
 #Subset by sex
 
-#Control and treatment males and females for Social stimulus
+#Control and treatment males and females 
 Control_Male_Learning <- subset(Learning_Control, Learning_Control$sex == "male")
 Control_Female_Learning <- subset(Learning_Control, Learning_Control$sex == "female")
 Treatment_Male_Learning <- subset(Learning_Treatment, Learning_Treatment$sex == "male")
 Treatment_Female_Learning <- subset(Learning_Treatment, Learning_Treatment$sex == "female")
+Maternal_Male_Learning <- subset(Learning_Maternal, Learning_Maternal$sex == "male")
+Maternal_Female_Learning <- subset(Learning_Maternal, Learning_Maternal$sex == "female")
+Paternal_Male_Learning <- subset(Learning_Paternal, Learning_Paternal$sex == "male")
+Paternal_Female_Learning <- subset(Learning_Paternal, Learning_Paternal$sex == "female")
 ```
 
 ### MAIN ANALYSIS 
@@ -41,7 +47,7 @@ Treatment_Female_Learning <- subset(Learning_Treatment, Learning_Treatment$sex =
 ```{r}
 #Check Normality with mixed model and then histogram of residuals
 
-Model_Learning <- lmer(difference ~ set + sex + (1 | fishID), data = p2cs) 
+Model_Learning <- lmer(difference ~ Tank + sex + (1 | fishID), data = p2cs) 
 tab_model(Model_Learning)
 hist(residuals(Model_Learning)) 
 
@@ -51,33 +57,22 @@ rpt_learning_control
 rpt_learning(Learning_Treatment) -> rpt_learning_treatment
 rpt_learning_treatment
 
-#Obtaining within-individual and between-individual variance 
+rpt_learning(Learning_Maternal) -> rpt_learning_Maternal
+rpt_learning_Maternal
+rpt_learning(Learning_Paternal) -> rpt_learning_Paternal
+rpt_learning_Paternal
 
-rpt_within_learning(Learning_Control) -> within_between_learning_control
-within_between_learning_control
-rpt_within_learning(Learning_Treatment) -> within_between_learning_treatment
-within_between_learning_treatment
-
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_learning_boot <- unlist_rptr(rpt_learning_control)
-Treatment_learning_boot <- unlist_rptr(rpt_learning_treatment) 
-learning_diff <- difference_boot(Treatment_learning_boot,Control_learning_boot)  
-q_learning <- quantiles_diff_boot(learning_diff) #obtaining 95% CI
-m_learning <- mean(learning_diff) #Obtaining mean
-m_learning
-q_learning
 
 # Calculating difference in variance between control and treatment groups
-Model_Learning1 <- lme(difference ~ set + sex, random = ~ 1| fishID, data = p2cs, na.action=na.exclude) #mixed model without variance structure
+Model_Learning1 <- lme(difference ~ Tank + sex, random = ~ 1| fishID, data = p2cs, na.action=na.exclude) #mixed model without variance structure
 summary(Model_Learning1)
-Model_Learning2 <- lme(difference ~ set + sex, random = ~ 1| fishID, weights = varIdent(form=~1|set), data = p2cs, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_Learning2 <- lme(difference ~ Tank + sex, random = ~ 1| fishID, weights = varIdent(form=~1|Tank), data = p2cs, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_Learning2)
 anova(Model_Learning1, Model_Learning2) #calculating difference between two models to find difference in variance
 
 #Quick Visualization
 p2cs %>%
-  ggplot(aes(set, difference, fill=set)) +
+  ggplot(aes(Tank, difference, fill=Tank)) +
   geom_violin(
     trim = FALSE,
     draw_quantiles = c(0.25, 0.5, 0.75), 
@@ -89,11 +84,6 @@ p2cs %>%
 #Sex Analysis
 
 ```{r}
-#Check Normality with mixed model and then histogram of residuals
-
-Model_Learning <- lmer(difference ~ set + sex + (1 | fishID), data = p2cs) 
-tab_model(Model_Learning)
-hist(residuals(Model_Learning)) 
 
 #Calculating repeatabilities using custom made functions for males (control and treatment)
 rpt_learning(Control_Male_Learning) -> rpt_learning_control_male
@@ -107,52 +97,22 @@ rpt_learning_control_female
 rpt_learning(Treatment_Female_Learning) -> rpt_learning_treatment_female
 rpt_learning_treatment_female
 
+#Calculating repeatabilities using custom made functions for males (Maternal and Paternal)
+rpt_learning(Maternal_Male_Learning) -> rpt_learning_Maternal_male
+rpt_learning_Maternal_male
+rpt_learning(Paternal_Male_Learning) -> rpt_learning_Paternal_male
+rpt_learning_Paternal_male
 
-#Obtaining within-individual and between-individual variance for males (control and treatment)
+#Calculating repeatabilities using custom made functions for females (Maternal and Paternal)
+rpt_learning(Maternal_Female_Learning) -> rpt_learning_Maternal_female
+rpt_learning_Maternal_female
+rpt_learning(Paternal_Female_Learning) -> rpt_learning_Paternal_female
+rpt_learning_Paternal_female
 
-rpt_within_learning(Control_Male_Learning) -> within_between_learning_control_male
-within_between_learning_control_male
-rpt_within_learning(Treatment_Male_Learning) -> within_between_learning_treatment_male
-within_between_learning_treatment_male
-
-#Obtaining within-individual and between-individual variance for females (control and treatment)
-
-rpt_within_learning(Control_Female_Learning) -> within_between_learning_control_female
-within_between_learning_control_female
-rpt_within_learning(Treatment_Female_Learning) -> within_between_learning_treatment_female
-within_between_learning_treatment_female
-
-
-#Obtaining differences between repeatabilities of males and females in the control group
-Control_learning_boot_male <- unlist_rptr(rpt_learning_control_male) #unlisting from the males
-Control_learning_boot_female <- unlist_rptr(rpt_learning_control_female) #unlisting from the females
-learning_diff_control <- difference_boot(Control_learning_boot_male,Control_learning_boot_female) #calculating the difference between males and females in the control group
-q_learning_control <- quantiles_diff_boot(learning_diff_control) #obtaining 95% CI
-m_learning_control <- mean(learning_diff_control) #Obtaining mean
-m_learning_control
-q_learning_control
-
-#Obtaining differences between repeatabilities of males and females in the treatment group
-Treatment_learning_boot_male <- unlist_rptr(rpt_learning_treatment_male) #unlisting from the males
-Treatment_learning_boot_female <- unlist_rptr(rpt_learning_treatment_female) #unlisting from the females
-learning_diff_treatment <- difference_boot(Treatment_learning_boot_female,Treatment_learning_boot_male) #calculating the difference between males and females in the control group
-q_learning_treatment <- quantiles_diff_boot(learning_diff_treatment) #obtaining 95% CI
-m_learning_treatment <- mean(learning_diff_treatment) #Obtaining mean
-m_learning_treatment
-q_learning_treatment
-
-
-
-# Calculating difference in variance between control and treatment groups
-Model_Learning1 <- lme(difference ~ set + sex, random = ~ 1| fishID, data = p2cs, na.action=na.exclude) #mixed model without variance structure
-summary(Model_Learning1)
-Model_Learning2 <- lme(difference ~ set + sex, random = ~ 1| fishID, weights = varIdent(form=~1|set), data = p2cs, na.action=na.exclude) #mixed model with variance structure varIdent
-summary(Model_Learning2)
-anova(Model_Learning1, Model_Learning2) #calculating difference between two models to find difference in variance
 
 #Quick Visualization
 p2cs %>%
-  ggplot(aes(set, difference, fill=set)) +
+  ggplot(aes(Tank, difference, fill=Tank)) +
   geom_violin(
     trim = FALSE,
     draw_quantiles = c(0.25, 0.5, 0.75), 
