--- a/Scripts/1.0_WEIGHT_LENGTH.Rmd
+++ b/Scripts/1.0_WEIGHT_LENGTH.Rmd
@@ -3,6 +3,8 @@ title: "Weight and Length"
 author: "Hamza"
 date: "23/11/2020"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ### Load packages
@@ -12,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 #checks for installation and loads packages
 pacman::p_load(lmerTest,ggThemeAssist,rptR,lme4,readxl, tidyr, dplyr, magrittr, lubridate, stringr, purrr,
                sjPlot,ggplot2,lubridate,wesanderson,ggbeeswarm,emmeans,patchwork,viridis,nlme,Rmisc,ggpubr,
-               stargazer)
+               stargazer, kableExtra)
 
 # Load custom functions
 source("functions_learning.R")
@@ -26,13 +28,21 @@ source("functions_repeatability.R")
 #Import and filter data
 ```{r, include = FALSE}
 #Master file with raw data
-Weight_Length_Data <- read.csv("../Data/Weight_Length/Weight_Length.csv")
+Weight_Length_Data <- read.csv("./Data/Weight_Length/Weight_Length.csv")
+
+str(Weight_Length_Data)
+
+Weight_Length_Data$Age_Weeks <- as.factor(Weight_Length_Data$Age_Weeks)
+
+
 
 #Subseting data by control and treatment
 Weight_Length_Maternal <- subset(Weight_Length_Data, Weight_Length_Data$Set == "Maternal") 
 Weight_Length_Paternal <- subset(Weight_Length_Data, Weight_Length_Data$Set == "Paternal") 
 Weight_Length_Control <- subset(Weight_Length_Data, Weight_Length_Data$Set == "Within Control") 
 Weight_Length_Treatment <- subset(Weight_Length_Data, Weight_Length_Data$Set == "Within Treatment") 
+
+Weight_Length_Age30 <- subset(Weight_Length_Data, Weight_Length_Data$Age_Weeks == "30") 
 ```
 
 ### REPEATABILITY ANALYSIS FOR BODY WEIGHT AND LENGTH 
@@ -47,18 +57,20 @@ Weight_Length_Treatment <- subset(Weight_Length_Data, Weight_Length_Data$Set == 
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_Body_Weight <- lmer(Weight_g ~ Set + Sex + Age_Weeks + (1 | Fish_ID), data = Weight_Length_Data) #mixed model 
+Model_Body_Weight <- lmer(Weight_g ~ Set + Sex + (1 | Fish_ID) + (1|Age_Weeks), data = Weight_Length_Data)
+summary(Model_Body_Weight)
 tab_model(Model_Body_Weight)
 hist(residuals(Model_Body_Weight))#histogram of residuals to check for normal distribution 
 
-Model_Body_Weight2 <- lmer(Weight_g ~ Set*Age_Weeks + Sex*Age_Weeks + (1 | Fish_ID) + (1 + Age_Weeks|Set), data = Weight_Length_Data) 
+Model_Body_Weight2 <- lmer(Weight_g ~ Set + Sex + (1 | Fish_ID) + (1 + Age_Weeks|Set), data = Weight_Length_Data) 
 summary(Model_Body_Weight2)
 tab_model(Model_Body_Weight2)
 hist(residuals(Model_Body_Weight2))
 
+em_weight <- emmeans(Model_Body_Weight, ~ c(Sex, Set)) 
+pairs(em_weight)
 
-
-#Calculating repeatabilities (with week)
+  #Calculating repeatabilities (with week)
 
 rpt_weight2(Weight_Length_Control) -> rpt_body_weight_control 
 rpt_body_weight_control
@@ -78,3 +90,65 @@ Model_Weight_2 <- lme(Weight_g ~ (Set + Sex + Age_Weeks)^2, random = ~ 1| Fish_I
 summary(Model_Weight_2)
 anova(Model_Weight_1, Model_Weight_2) #calculating difference between two models to find difference in variance
 ```
+
+
+#Plot
+```{r}
+violin_plot_bw <- function(df,param,lab1,lab2) { #only need to add dataframe, parameter, and labels for axes
+  p <- ggplot(data = df,aes(x = Sex, y = param, fill = Set))+
+    scale_fill_viridis_d()+ #color scheme
+    geom_violin(alpha=0.4, position = position_dodge(width = .75),size=0.5,color="black")+ #violin plot to display distribution density
+    geom_boxplot(notch = TRUE,  outlier.size = -1, color="black",lwd=0.9, alpha = 0.5)+#boxplot to display quantiles
+    geom_point( shape = 21,size=2, position = position_jitterdodge(), color="black",alpha=1)+#scatterplot of individual data points
+    theme_pubr(base_family = "")+
+    labs(title=lab1,y = lab2)+#labels
+    rremove("legend.title")+
+    theme(panel.border = element_rect(colour = "black", fill=NA, size=1),
+    axis.ticks = element_line(size=2,color="black"),axis.ticks.length=unit(0.2,"cm"),
+    legend.position = c(0.92, 0.85))+
+    font("xylab",size=13)+font("xy",size=13)+
+    font("xy.text", size = 13)+
+    font("legend.text",size = 13)+
+    theme(legend.position = "right")+
+    theme(axis.title.x=element_blank())+
+    theme(text=element_text(family="Times New Roman", size=12))
+  return(p)
+  
+}
+
+violin_plot_bw(Weight_Length_Data, Weight_Length_Data$Weight_g, "Body weight (g) by age (weeks)", "g")+
+  facet_grid(~Age_Weeks)
+
+violin_plot_bw(Weight_Length_Age30, Weight_Length_Age30$Weight_g, "Body weight (g) at 30 weeks", "g")
+
+
+
+
+
+
+ str(Weight_Length_Data)
+
+# Summary
+Summary_Weight <- summarySE(Weight_Length_Data, measurevar="Weight_g", groupvars=c("Set", "Age_Weeks", "Sex"))
+
+?summarySE
+
+#Line plot
+
+
+ggplot(Summary_Weight, aes(x=Age_Weeks, y=Weight_g,color=Set, group=Set)) + 
+  geom_line()+
+  geom_point()+
+  geom_errorbar(aes(ymin=Weight_g-se, ymax=Weight_g+se), colour="black", width=.1)+
+  facet_grid(~Sex)
+
+Summary_Weight %>% kable() %>% kable_styling()
+
+Summary_Weight %>%
+  kbl(caption = "Body weight at age 30 weeks") %>%
+  kable_classic(full_width = F, html_font = "Cambria")%>%
+    row_spec(c(1,3,5,7), color = "white", background = "#666666")%>%
+  row_spec(c(2,4,6,8), color = "black", background = "#FFFFFF")
+
+```
+
