--- a/Scripts/1.0_WEIGHT_LENGTH.Rmd
+++ b/Scripts/1.0_WEIGHT_LENGTH.Rmd
@@ -32,7 +32,7 @@ Weight_Length_Data <- read.csv("./Data/Weight_Length/Weight_Length.csv")
 
 str(Weight_Length_Data)
 
-Weight_Length_Data$Age_Weeks <- as.factor(Weight_Length_Data$Age_Weeks)
+#Weight_Length_Data$Age_Weeks <- as.numeric(as.factor(Weight_Length_Data$Age_Weeks))
 
 
 
@@ -57,15 +57,22 @@ Weight_Length_Age30 <- subset(Weight_Length_Data, Weight_Length_Data$Age_Weeks =
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_Body_Weight <- lmer(Weight_g ~ Set + Sex + (1 | Fish_ID) + (1|Age_Weeks), data = Weight_Length_Data)
+Model_Body_Weight <- lmer(Weight_g ~ Set -1  + Sex +scale(Age_Weeks) + (1 + Age_Weeks | Fish_ID) , data = Weight_Length_Data)
 summary(Model_Body_Weight)
 tab_model(Model_Body_Weight)
 hist(residuals(Model_Body_Weight))#histogram of residuals to check for normal distribution 
 
-Model_Body_Weight2 <- lmer(Weight_g ~ Set + Sex + (1 | Fish_ID) + (1 + Age_Weeks|Set), data = Weight_Length_Data) 
+AIC(Model_Body_Weight)
+#[1] -1483.305
+
+# this does not coverge 
+Model_Body_Weight2 <- lmer(Weight_g ~ Set + Sex + scale(Age_Weeks) + (1 | Fish_ID), data = Weight_Length_Data) 
 summary(Model_Body_Weight2)
 tab_model(Model_Body_Weight2)
 hist(residuals(Model_Body_Weight2))
+
+AIC(Model_Body_Weight2)
+#[1] -1468.374
 
 em_weight <- emmeans(Model_Body_Weight, ~ c(Sex, Set)) 
 pairs(em_weight)
